# enrt-cac-3

./: AGENTS.md  CLAUDE.md  README.md  cli.py  pyproject.toml
.claude/: settings.json
cartography/: __init__.py  drift_map.py  timeline.py
evidence/: before_after.md  sample_report.md
expeditions/: detect.md  excavate.md  report.md
field_guides/archaeology/: SKILL.md
field_guides/drift_analysis/: SKILL.md
hooks/: post_review.sh  pre_commit.sh
lenses/: __init__.py  base.py  comment_lens.py  docstring_lens.py  readme_lens.py  test_lens.py  todo_lens.py
outpost/: mcp_config.json  server.py
tests/: test_cartography.py  test_lenses.py  test_strata.py
the_dig/: __init__.py  artifacts.py  fieldnotes.py  strata.py
