[project]
name = "drift"
version = "0.1.0"
description = "Find where your codebase lies about itself."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
drift = "cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["the_dig*", "lenses*", "cartography*", "outpost*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
